HTML structure for features

--- a/index.html
+++ b/index.html
@@ -130,6 +130,66 @@
         </div>
         <!-- endof: hero -->
 
+        <!-- features -->
+        <div class="container mx-auto py-10 -scroll-mt-24" id="features">
+            <div class="flex pl-8 xl:pl-28 pr-8">
+                <div class="grid grid-cols-2 justify-center gap-12">
+
+                    <!-- feature images -->
+                    <div class="flex items-center">
+                        <div class="relative inset-x-[40%] transform -translate-x-1/2">
+                            <!-- phone frame -->
+                            <img src="img/mobile-frame.png" class="relative z-50 max-h-[700px]">
+
+                            <!-- feature #1 -->
+                            <img src="img/feature-1.png" class="absolute -z-10 top-2.5 left-4 rounded-[3rem] max-h-[680px]">
+
+                            <!-- feature #2 -->
+                            <img src="img/feature-2.png" class="absolute -z-10 top-2.5 left-4 rounded-[3rem] max-h-[680px]">
+
+                            <!-- feature #3 -->
+                            <img src="img/feature-3.png" class="absolute -z-10 top-2.5 left-4 rounded-[3rem] max-h-[680px]">
+
+                            <!-- feature #4 -->
+                            <img src="img/feature-4.png" class="absolute -z-10 top-2.5 left-4 rounded-[3rem] max-h-[680px]">
+                        </div>
+                    </div>
+                    <!-- endof: feature images -->
+
+                    <!-- feature descriptions -->
+                    <div class="flex flex-col gap-8 px-3 cursor-pointer justify-center">
+
+                        <!-- feature #1 -->
+                        <div class="grid gap-4 hover:pl-4 hover:border-l-4 border-brand-50 transition-all duration-300">
+                            <h2 class="text-4xl font-bold">Sleep stories</h2>
+                            <p class="w-8/10">Vestibulum semper eros nec turpis consequat placerat. Vestibulum dapibus nulla ut est porttitor maximus. Aenean ipsum nulla, lacinia posuere nibh non, aliquam condimentum sapien.</p>
+                        </div>
+
+                        <!-- feature #2 -->
+                        <div class="grid gap-4 hover:pl-4 hover:border-l-4 border-brand-50 transition-all duration-300">
+                            <h2 class="text-4xl font-bold">Play options</h2>
+                            <p class="w-8/10">Vestibulum semper eros nec turpis consequat placerat. Vestibulum dapibus nulla ut est porttitor maximus. Aenean ipsum nulla, lacinia posuere nibh non, aliquam condimentum sapien.</p>
+                        </div>
+
+                        <!-- feature #3 -->
+                        <div class="grid gap-4 hover:pl-4 hover:border-l-4 border-brand-50 transition-all duration-300">
+                            <h2 class="text-4xl font-bold">Growing library of musics</h2>
+                            <p class="w-8/10">Vestibulum semper eros nec turpis consequat placerat. Vestibulum dapibus nulla ut est porttitor maximus. Aenean ipsum nulla, lacinia posuere nibh non, aliquam condimentum sapien.</p>
+                        </div>
+
+                        <!-- feature #4 -->
+                        <div class="grid gap-4 hover:pl-4 hover:border-l-4 border-brand-50 transition-all duration-300">
+                            <h2 class="text-4xl font-bold">Built in audio player</h2>
+                            <p class="w-8/10">Vestibulum semper eros nec turpis consequat placerat. Vestibulum dapibus nulla ut est porttitor maximus. Aenean ipsum nulla, lacinia posuere nibh non, aliquam condimentum sapien.</p>
+                        </div>
+
+                    </div>
+                    <!-- endof: feature descriptions -->
+                </div>
+            </div>
+        </div>
+        <!-- endof: features -->
+
     </div>
 </body>
 
