Updated for mobile

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
         <!-- features -->
         <div class="container mx-auto py-10 -scroll-mt-24" id="features">
+            <!-- desktop version -->
             <div class="hidden lg:flex pl-16 pr-8 xl:-ml-8 xl:pl-28" x-data="{ feature: 1 }">
                 <div class="grid grid-cols-2 justify-center gap-6">
 
@@ -189,6 +190,45 @@
                     <!-- endof: feature descriptions -->
                 </div>
             </div>
+            <!-- endof: desktop version -->
+
+
+            <!-- mobile version -->
+            <div class="relative lg:hidden w-full flex gap-20 md:gap-12 snap-x overflow-x-auto overflow-y-hidden -mb-10">
+
+                <!-- feature #1 -->
+                <div class="snap-center px-4 flex flex-col gap-4 shrink-0 relative w-[340px] mx-4 md:mr-4 md:ml-2 text-center h-[780px]">
+                    <h2 class="text-3xl font-bold">Sleep stories</h2>
+                    <p class="text-lg px-1 -mx-4">Vestibulum semper eros nec turpis consequat placerat. Vestibulum dapibus nulla ut est porttitor.</p>
+                    <img src="img/feature-1.png" class="absolute w-64 inset-x-1/2 -translate-x-1/2 top-44 rounded-[3rem]">
+                    <img src="img/mobile-frame.png" class="absolute w-80  inset-x-1/2 -translate-x-1/2 z-50 top-44 px-4">
+                </div>
+
+                <!-- feature #2 -->
+                <div class="snap-center px-4 flex flex-col gap-4 shrink-0 relative w-[340px] mx-4 text-center h-[780px]">
+                    <h2 class="text-3xl font-bold">Play options</h2>
+                    <p class="text-lg px-1 -mx-4">Vestibulum semper eros nec turpis consequat placerat. Vestibulum dapibus nulla ut est porttitor.</p>
+                    <img src="img/feature-2.png" class="absolute w-64 inset-x-1/2 -translate-x-1/2 top-44 rounded-[3rem]">
+                    <img src="img/mobile-frame.png" class="absolute w-80  inset-x-1/2 -translate-x-1/2 z-50 top-44 px-4">
+                </div>
+
+                <!-- feature #3 -->
+                <div class="snap-center px-4 flex flex-col gap-4 shrink-0 relative w-[340px] mx-4 text-center h-[780px]">
+                    <h2 class="text-3xl font-bold">Growing music library</h2>
+                    <p class="text-lg px-1 -mx-4">Vestibulum semper eros nec turpis consequat placerat. Vestibulum dapibus nulla ut est porttitor.</p>
+                    <img src="img/feature-3.png" class="absolute w-64 inset-x-1/2 -translate-x-1/2 top-44 rounded-[3rem]">
+                    <img src="img/mobile-frame.png" class="absolute w-80  inset-x-1/2 -translate-x-1/2 z-50 top-44 px-4">
+                </div>
+
+                <!-- feature #4 -->
+                <div class="snap-center px-4 flex flex-col gap-4 shrink-0 relative w-[340px] mx-4 text-center h-[780px]">
+                    <h2 class="text-3xl font-bold">Built in audio player</h2>
+                    <p class="text-lg px-1 -mx-4">Vestibulum semper eros nec turpis consequat placerat. Vestibulum dapibus nulla ut est porttitor.</p>
+                    <img src="img/feature-4.png" class="absolute w-64 inset-x-1/2 -translate-x-1/2 top-44 rounded-[3rem]">
+                    <img src="img/mobile-frame.png" class="absolute w-80  inset-x-1/2 -translate-x-1/2 z-50 top-44 px-4">
+                </div>
+            </div>
+            <!-- endof: mobile version -->
         </div>
         <!-- endof: features -->
 
