Fixed hero image for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                 <!-- hero-image -->
                 <div class="hidden sm:flex">
-                    <img src="/img/hero-image.png" class="absolute inset-x-1/2 lg:inset-x-[58%] -top-1/4 md:-top-24 object-cover">
+                    <img src="img/hero-image.png" class="absolute inset-x-1/2 lg:inset-x-[58%] -top-1/4 md:-top-24 object-cover">
                 </div>
                 <!-- endof: hero-image -->
 
