Added Figma credits

--- a/index.html
+++ b/index.html
@@ -232,6 +232,22 @@
         </div>
         <!-- endof: features -->
 
+        <div class="flex flex-wrap gap-2 items-center text-sm justify-center md:justify-end py-3 px-4 md:px-12 bottom-0 inset-x-0 box-shadow bg-brand-700/40">
+            <div class="text-center">Landing page created with inspiration from</div>
+
+            <div>
+                <a href="https://www.figma.com/community/file/882888114457713282" target="_blank" class="no-underline transition-all duration-300 text-brand-50 hover:text-brand-300">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 300" class="mb-0.5 mr-1 h-4 w-4 inline">
+                        <style type="text/css"> .st0 { fill: #0acf83 } .st1 { fill: #a259ff } .st2 { fill: #f24e1e } .st3 { fill: #ff7262 } .st4 { fill: #1abcfe } </style>
+                        <path id="path0_fill" class="st0" d="M50 300c27.6 0 50-22.4 50-50v-50H50c-27.6 0-50 22.4-50 50s22.4 50 50 50z" />
+                        <path id="path1_fill" class="st1" d="M0 150c0-27.6 22.4-50 50-50h50v100H50c-27.6 0-50-22.4-50-50z" />
+                        <path id="path1_fill_1_" class="st2" d="M0 50C0 22.4 22.4 0 50 0h50v100H50C22.4 100 0 77.6 0 50z" />
+                        <path id="path2_fill" class="st3" d="M100 0h50c27.6 0 50 22.4 50 50s-22.4 50-50 50h-50V0z" />
+                        <path id="path3_fill" class="st4" d="M200 150c0 27.6-22.4 50-50 50s-50-22.4-50-50 22.4-50 50-50 50 22.4 50 50z" />
+                    </svg>
+                    <span class="font-bold">Meditation app UI</span> <span class="italic hidden md:inline">(by Afsar)</span></a>
+            </div>
+        </div>
     </div>
 </body>
 
